tests/snapshots/e2e__feature_tests__existing_installation__Bash.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm install v8.11.3
fnm install v8.11.3 2>&1 | grep 'already installed'
